[package]
name = "PlaywrightDebugMover"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.57", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug"
] }
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.7.9", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
ctrlc = "3.4"
regex = "1"
toml = "0.8"
widestring = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
tera = "1.19"
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
base64 = "0.22"
html-escape = "0.2"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = "symbols"

[package.metadata.winres]
windows_subsystem = "windows"
